[gd_scene load_steps=12 format=3 uid="uid://cv5ocjmvk0ijc"]

[ext_resource type="Script" path="res://Entities/Enemies/Thrower/thrower.gd" id="1_7itwx"]
[ext_resource type="PackedScene" uid="uid://bkltr64yko5wx" path="res://Entities/Enemies/Thrower/weapons/shooter.tscn" id="2_thjdb"]
[ext_resource type="Texture2D" uid="uid://jpjkg3xpjcu8" path="res://Art/throw5.png" id="3_vo7n8"]
[ext_resource type="Script" path="res://Entities/Components/attack.gd" id="4_cyhq7"]
[ext_resource type="PackedScene" uid="uid://df43yk4eaq5kl" path="res://Entities/Components/health.tscn" id="5_uyqwq"]
[ext_resource type="PackedScene" uid="uid://bqjejm0dkpqrs" path="res://Entities/Components/hitbox.tscn" id="6_tuour"]
[ext_resource type="PackedScene" path="res://Entities/Components/hurtbox.tscn" id="7_b3mxa"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_siodo"]
radius = 17.0
height = 62.0

[sub_resource type="CircleShape2D" id="CircleShape2D_mptky"]
radius = 474.009

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_kejp1"]
radius = 17.0
height = 62.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_brcmj"]
radius = 17.0
height = 62.0

[node name="Thrower" type="CharacterBody2D"]
collision_layer = 8
script = ExtResource("1_7itwx")

[node name="Shooter" parent="." instance=ExtResource("2_thjdb")]

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = ExtResource("3_vo7n8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 20)
shape = SubResource("CapsuleShape2D_siodo")

[node name="AggroRange" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="AggroRange"]
shape = SubResource("CircleShape2D_mptky")
debug_color = Color(0.54902, 0.564706, 0, 0.419608)

[node name="Attack" type="Node2D" parent="."]
script = ExtResource("4_cyhq7")

[node name="Health" parent="." instance=ExtResource("5_uyqwq")]

[node name="Hitbox" parent="." node_paths=PackedStringArray("health") instance=ExtResource("6_tuour")]
collision_layer = 8
collision_mask = 0
health = NodePath("../Health")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, 20)
shape = SubResource("CapsuleShape2D_kejp1")

[node name="Hurtbox" parent="." node_paths=PackedStringArray("attack") instance=ExtResource("7_b3mxa")]
collision_layer = 0
attack = NodePath("../Attack")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(0, 20)
shape = SubResource("CapsuleShape2D_brcmj")

[connection signal="body_entered" from="AggroRange" to="." method="_on_aggro_range_body_entered"]
[connection signal="body_exited" from="AggroRange" to="." method="_on_aggro_range_body_exited"]
